retrieveUnpackaged/objects/Organization__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_2__c</fullName>
        <label>Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <label>Zip code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Organization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>